argocd/utility/hashicorp-vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashicorp-vault-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - vault.homelab.bowmans.site
    secretName: hashicorp-vault-certificate
  rules:
    - host: vault.homelab.bowmans.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hashicorp-vault
                port:
                  number: 3200
